<resources>
    <string name="app_name">ExpenseSharing</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="import_a_group">Import a Group</string>
    <string name="add_a_new_group">Add a new Group</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="selected">Selected: %1$s</string>
    <string name="select_a_currency">Select a Currency</string>
    <string name="participants">Participants:</string>
    <string name="participant_name">Participant Name</string>
    <string name="add">Add</string>
    <string name="create_group">Create Group</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add_a_participant">Add a Participant</string>
    <string name="add_a_new_expense">Add a new expense</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="paid_for">Paid for:</string>
    <string name="done">Done</string>
    <string name="paid_by">Paid by</string>
    <string name="add_participant">Add Participant</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="attach_balances_to_widget">Attach balances to widget</string>
    <string name="log_out">Log Out</string>
    <string name="logo_image">Logo Image</string>
    <string name="import_code_label">Send the following code to your friends so that they can join the Group!</string>
    <string name="code">CODE:</string>
    <string name="import_create_participant_label">Or add a new participant not associated with any user.</string>
    <string name="associate_user">Associate your user with an existing participant:</string>
    <string name="add_new_participant_associate">Or add a new participant to the group:</string>
    <string name="balance_list_widget">Balance List</string>
    <string name="import_code">Import Code</string>
    <string name="owes">owes</string>
</resources>
