<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.expense.CreateExpenseActivity"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_ce_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_ce_amount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tv_ce_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EUR"
            tools:text="EUR"/>

    </LinearLayout>

    <EditText
        android:id="@+id/et_ce_paid_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/paid_by"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/et_ce_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="date" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/grayBackground"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paid_for"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_participants_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>