<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Theme.AppCompat.DayNight.NoActionBar"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailActivity"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/detail_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/detail_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabMode="fixed"/>
    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="40dp"
            app:expandedTitleMarginEnd="64dp"
            android:paddingBottom="74dp"
            app:title="App Title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:background="@android:color/white">

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/toolbar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"/>

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/add_expense_container"
        android:layout_width="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_add_expense"
            android:text="@string/add_a_new_expense"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:layout_height="wrap_content"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_detail_add"
            android:layout_width="56dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_add_white_56dp"
            app:backgroundTint="@color/colorAccent"
            android:layout_margin="16dp"
            android:layout_height="56dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/add_parcitipant_container"
        android:layout_width="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_add_participant"
            android:text="@string/add_a_participant"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:layout_height="wrap_content"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_detail_add_participant"
            android:layout_width="56dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_supervisor_account_black_24dp"
            app:backgroundTint="@color/colorAccent"
            android:layout_margin="16dp"
            android:layout_height="56dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_to_widget"
        android:layout_width="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_add_to_widget"
            android:text="@string/attach_balances_to_widget"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:layout_height="wrap_content"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_add_to_widget"
            android:layout_width="56dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_attach_black_24dp"
            app:backgroundTint="@color/colorAccent"
            android:layout_margin="16dp"
            android:layout_height="56dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_detail_menu"
        android:layout_width="56dp"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_add_white_56dp"
        android:layout_margin="16dp"
        android:layout_height="56dp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>